--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1,6 +1,8 @@
-@Article{prova,
-author = {ciao},
-title = {cicococo},
 
+@Misc{battle.net,
+	title = {Battle.net Leagues},
+	howpublished = {\url{https://liquipedia.net/starcraft2/Battle.net_Leagues}},
+ 	note = {Accessed: 2021-07-20}
 }
+
 
