--- a/main.tex
+++ b/main.tex
@@ -42,10 +42,10 @@
 }% Title
 \author{\textsc{Francesco Moretti} \\
     \emph{130301} \\
-    Corso di Laurea\\
+    Ingegneria informatica\\
     \emph{260877@studenti.unimore.it}
   }
-\date{}
+\date{Luglio 2021}
 \maketitle
 \clearpage
 
@@ -54,7 +54,7 @@
 %----------------------------------------------------------------------------------------
 \begin{abstract}
 \normalsize
-Abstract 
+Questo progetto è incentrato sulla classificazione dei giocatori di videogiochi sulla base delle loro abilità. L’obbiettivo è capire se è possibile creare un’implementazione che usi il machine learning per svolgere questo compito, e che vantaggi ha questa soluzione rispetto alle alternative attualmente usate correntemente. Per farlo costruiremo diversi modelli di machine learning e li confronteremo per capire quale si adatta meglio alle necessità di questo problema.
 
 
 \end{abstract}
